[tool.poetry]
name = "buckwheat"
version = "0.1.0"
description = "A multi-language tokenizer for extracting classes, functions, and identifiers from source code."
authors = ["JetBrains Research <info@research.jetbrains.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^0.29.21"
dask = "^2.20.0"
Pygments = "^2.6.1"
PyStemmer = "^2.0.0"
tree_sitter = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
